# unipose

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  environment.yaml  pyproject.toml
.github/: FUNDING.yml
.github/workflow/: pytest.yml
.github/workflows/: pytest.yml
apidocs/: all-documents.html  classIndex.html  fullsearchindex.json  index.html  moduleIndex.html  nameIndex.html  objects.inv  searchindex.json  undoccedSummary.html  unipose.datasets.AnimalKingdomDataset.html  unipose.datasets.BaseJointDataset.html  unipose.datasets.COCODataset.html  unipose.datasets.ConcatJointDataset.html  unipose.datasets.MPIIDataset.html  unipose.datasets.animal_kingdom.html  unipose.datasets.base_joint_dataset.BaseJointDataset.html  unipose.datasets.base_joint_dataset.html  unipose.datasets.coco.html  unipose.datasets.html  unipose.datasets.mpii.html  unipose.datasets.multi_dataloader.MultiDataloader.html  unipose.datasets.multi_dataloader.html  unipose.datasets.utils.html  unipose.layers.DUC.html  unipose.layers.SEResNeXt.html  unipose.layers.bottleneckx.BottleneckX.html  unipose.layers.bottleneckx.html  unipose.layers.duc.html  unipose.layers.html  unipose.layers.selayer.SELayer.html  unipose.layers.selayer.html  unipose.layers.seresnext.html  unipose.losses.GLES.html  unipose.losses.graph_learning.GLES_fc.html  unipose.losses.graph_learning.html  unipose.losses.html  unipose.models.UniPose.html  unipose.models.html  unipose.models.unipose.html
docs/: datasets.md
scripts/: test.py  train.py  vis_dataset.py  vis_graph.py  visualize.py
server/: config.json  server.py
server/static/: demo.css  index.html
test_images/: R-C.jfif
tests/: bbox.py  datasets.py  graph.py  test_model_v1.py  test_yolo.py
unipose/cocotools/: __init__.py  coco.py
unipose/datasets/: __init__.py  animal_kingdom.py  ap10k.py  base_joint_dataset.py  coco.py  mpii.py  multi_dataloader.py  utils.py
unipose/layers/: __init__.py  bottleneckx.py  duc.py  selayer.py  seresnext.py
unipose/losses/: __init__.py  graph_learning.py
unipose/models/: __init__.py  unipose.py  uniskel.py
unipose/yolo/: README.md  __init__.py  yolo_unipose.py
unipose/yolo/models/: common.py
yolo_unipose/: README.md  yolo_unipose.py
