[project]
name = "unipose"
version = "0.0.3"
description = "Unified Pose Estimation Framework"
authors = [
    {name = "Kunologist", email = "jiyikun2002@gmail.com"}
]
dependencies = [
    "torch>=1.13.0,<2.0.0",
    "torchvision>=0.14.0,<0.15.0",
    "tqdm",
    "opencv-python>=4.0.0,<5.0.0",
    "orjson",
    "numpy",
    "loguru",
    "Pillow",
    "flask",
    "imageio",
    "easydict",
    "requests",
    "pycocotools",
    "torchinfo"
]
keywords = ["pose-estimation", "pose", "framework", "skeleton", "animal-pose"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
repository = "https://github.com/Gennadiyev/unipose"

[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "black>=22.10.0",
    "isort>=5.10.1",
    "pytest>=7.0.0",
]

[tool.pdm.build]
includes = ["unipose"]

[tool.black]
line-length = 120
target-version = ['py310', 'py311']

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -m \"not slow and not contains_absolute_path\""
testpaths = [
    "tests/*"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "contains_absolute_path: the test contains absolute path, usually for dataset locations and related information (deselect with '-m \"not contains_absolute_path\"')",
]
